# scatter-yolo

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: cli.py  image_generator.py  utils.py
samples/images/: credits.txt
samples/images/scatter_yolo_images/: 0-24-31.txt  0-25-29.txt  0-27-30.txt  0-28-26.txt  0-29-26.txt  0-30-23.txt  0-30-29.txt  0-35-23.txt  0-7-5.txt  0-8-4.txt  0-8-45.txt  1-28-27.txt
