[build-system]
requires = ["flit_core >=3.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scatter-yolo"
version = "0.0.1"
description="Scatter the given objetcs (on optionally provided background images) and generate an image with YOLO annotations"
readme= "README.md"
requires-python = ">=3.0.0"
license = {file = "LICENSE"}
authors = [{name= "Sandesh Chapagain", email = "hello@sandeshchapagain.com"}]
dependencies = [
"click>=8.0","pillow>=10"
]
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent"
]

[project.urls]
repository = "https://github.com/schapagain/scatter-yolo"

[project.scripts]
scatter-yolo = "app:cli"

[tool.flit.module]
name = "app"